--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,7 @@
     />
   </head>
   <body>
-    <div class="my-modal">
-      
-  </div>
+    <div class="my-modal"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
